--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
                 <button>x</button>
                 Please Sign In
                 <input type="email" name="email" placeholder="email" autofocus required pattern=".{3,}">
-                <input type="password" name="password" placeholder="password" autofocus required pattern=".{1,}">
+                <input type="password" name="password" placeholder="password" required pattern=".{1,}">
                 <input type="checkbox" name="Remember me">
                 Remember me
                 <button>Sign In</button>
