--- a/item-card.html
+++ b/item-card.html
@@ -15,11 +15,27 @@
             <main>
                 <span>Electronics</span>|<span>Nexus 7</span>
                 <div>
-                    <img name="main pic of good">
+                    <img name="main-pic-of-good">
                     <div>
-                        <img name="small slide">
+                        <button name></button><img name="left-slider-button"></button>
+                        <img name="slide">
+                        <button name></button><img name="right-slider-button"></button>
                     </div>    
                 </div>
+                <div>
+                    <span>Nexus 7</span> <img name="slide">
+                    <p>Lorem ipsum dolor sit amet...</p>
+                    Price<span>$555</span>
+                    <form>
+                        Quantity
+                        <input type="number" pattern=".{0,}">
+                        <button>Add to cart</button>
+                        <img name="twitter">
+                        <img name="facebook">
+                        <img name="email">
+                    </form>
+                </div>
+
                 
             </main>
             <footer>©</footer>
