--- a/login.html
+++ b/login.html
@@ -9,11 +9,13 @@
             <main>
                 <button>x</button>
                 Please Sign In
-                <input type="email" name="email" placeholder="email" autofocus required pattern=".{3,}">
-                <input type="password" name="password" placeholder="password" required pattern=".{1,}">
-                <input type="checkbox" name="Remember me">
-                Remember me
-                <button>Sign In</button>
+                <form>
+                    <input type="email" name="email" placeholder="email" autofocus required pattern=".{3,}">
+                    <input type="password" name="password" placeholder="password" required pattern=".{1,}">
+                    <input type="checkbox" name="Remember me">
+                    Remember me
+                    <button>Sign In</button>
+                </form>
                 <a href="register.html">Register</a>
             </main>
         </div>
