--- a/categories-grid.html
+++ b/categories-grid.html
@@ -13,8 +13,10 @@
                 <button name="profile"></button>
             </header>
             <main>
-                <img alt="photo of category">
-                <a>Shoes</a> (45)
+                <div class="categoryInGrid">
+                    <img alt="photo of category">
+                    <a>Shoes</a> (45)
+                </div>
             </main>
             <footer>©</footer>
         </div>
