started to make css header in categories-grid

--- a/categories-grid.html
+++ b/categories-grid.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title> categories-grid </title>
+        <link rel="stylesheet" href="./css/globalStyle.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div>
@@ -13,9 +15,31 @@
                 <button name="profile"></button>
             </header>
             <main>
-                <div class="categoryInGrid">
-                    <img alt="photo of category">
-                    <a>Shoes</a> (45)
+                <div class="categories-grid">
+                    <div class="categories-grid__category">
+                        <img alt="photo of category">
+                        <a>Shoes</a> (45)
+                    </div>
+                    <div class="categories-grid__category">
+                        <img alt="photo of category">
+                        <a>Shoes</a> (45)
+                    </div>
+                    <div class="categories-grid__category">
+                            <img alt="photo of category">
+                            <a>Shoes</a> (45)
+                        </div>
+                        <div class="categories-grid__category">
+                                <img alt="photo of category">
+                                <a>Shoes</a> (45)
+                            </div>
+                            <div class="categories-grid__category">
+                                    <img alt="photo of category">
+                                    <a>Shoes</a> (45)
+                                </div>
+                                <div class="categories-grid__category">
+                                        <img alt="photo of category">
+                                        <a>Shoes</a> (45)
+                                    </div>
                 </div>
             </main>
             <footer>©</footer>
