--- a/categories-grid.html
+++ b/categories-grid.html
@@ -3,46 +3,55 @@
     <head>
         <meta charset="utf-8">
         <title> categories-grid </title>
-        <link rel="stylesheet" href="./css/globalStyle.css">
+        <link rel="stylesheet" href="./css/categories-grid.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div>
-            <header>
-                <img alt="logo">
-                <input type="search" name="search" placeholder="Search" pattern=".{1,}">
-                <button name="card"> </button>
-                <button name="profile"></button>
+            <header class="header">
+                <div class="logo">
+                    <img alt="logo" class="logo__logo" src=".\pics\logo.png">
+                </div>
+                <div class='header-buttons'>
+                    <input type="search" name="search" placeholder="Search" pattern=".{1,}">
+                    <button name="card"><i class="fas fa-shopping-cart"></i> </button>
+                    <button name="profile"> <i class="fas fa-user-circle"></i> </button>
+                </div>
             </header>
-            <main>
+            <main class="main">
                 <div class="categories-grid">
                     <div class="categories-grid__category">
-                        <img alt="photo of category">
+                        <img alt="photo of category" src=".\pics\categories-grid\big_91a0aec1f7e49f08f81c7c25bcce9fd1_0.jpg">
                         <a>Shoes</a> (45)
                     </div>
                     <div class="categories-grid__category">
-                        <img alt="photo of category">
+                        <img alt="photo of category" src=".\pics\categories-grid\big_91a0aec1f7e49f08f81c7c25bcce9fd1_01.jpg">
                         <a>Shoes</a> (45)
                     </div>
                     <div class="categories-grid__category">
-                            <img alt="photo of category">
-                            <a>Shoes</a> (45)
-                        </div>
-                        <div class="categories-grid__category">
-                                <img alt="photo of category">
-                                <a>Shoes</a> (45)
-                            </div>
-                            <div class="categories-grid__category">
-                                    <img alt="photo of category">
-                                    <a>Shoes</a> (45)
-                                </div>
-                                <div class="categories-grid__category">
-                                        <img alt="photo of category">
-                                        <a>Shoes</a> (45)
-                                    </div>
+                        <img alt="photo of category" src=".\pics\categories-grid\big_91a0aec1f7e49f08f81c7c25bcce9fd1_1.jpg">
+                        <a>Shoes</a> (45)
+                    </div>
+                    <div class="categories-grid__category">
+                        <img alt="photo of category" src=".\pics\categories-grid\big_91a0aec1f7e49f08f81c7c25bcce9fd1_12.jpg">
+                        <a>Shoes</a> (45)
+                    </div>
+                    <div class="categories-grid__category">
+                        <img alt="photo of category" src=".\pics\categories-grid\big_8018582e5b743eec172a260d99602c0f_0.jpg">
+                        <a>Shoes</a> (45)
+                    </div>
+                    <div class="categories-grid__category">
+                        <img alt="photo of category" src=".\pics\categories-grid\big_d41d8cd98f00b204e9800998ecf8427e_0.jpg">
+                        <a>Shoes</a> (45)
+                    </div>
+                    <div class="categories-grid__category">
+                        <img alt="photo of category" src=".\pics\categories-grid\big_d41d8cd98f00b204e9800998ecf8427e_1.jpg">
+                        <a>Shoes</a> (45)
+                    </div>
                 </div>
             </main>
-            <footer>©</footer>
+            <footer class="footer"><p>©</p></footer>
         </div>
     </body>
 </html>
