categories-grid finished, problem with first pic

--- a/categories-grid.html
+++ b/categories-grid.html
@@ -14,40 +14,44 @@
                     <img alt="logo" class="logo__logo" src=".\pics\logo.png">
                 </div>
                 <div class='header-buttons'>
-                    <input type="search" name="search" placeholder="Search" pattern=".{1,}">
-                    <button name="card"><i class="fas fa-shopping-cart"></i> </button>
-                    <button name="profile"> <i class="fas fa-user-circle"></i> </button>
+                    <input class="header-elements__Element" type="search" name="search" placeholder="Search" pattern=".{1,}">
+                    <button class="header-elements__Element" name="card">
+                        <i class="fas fa-shopping-cart"></i>
+                    </button>
+                    <button class="header-elements__Element" name="profile">
+                        <i class="fas fa-user-circle"></i>
+                    </button>
                 </div>
             </header>
             <main class="main">
                 <div class="categories-grid">
                     <div class="categories-grid__category">
-                        <img alt="photo of category" src=".\pics\categories-grid\big_91a0aec1f7e49f08f81c7c25bcce9fd1_0.jpg">
-                        <a>Shoes</a> (45)
+                        <img alt="photo of category" class="pic-of-category" src=".\pics\categories-grid\big_91a0aec1f7e49f08f81c7c25bcce9fd1_0.jpg">
+                        <span><a>Shoes</a> (45)</span>
                     </div>
                     <div class="categories-grid__category">
-                        <img alt="photo of category" src=".\pics\categories-grid\big_91a0aec1f7e49f08f81c7c25bcce9fd1_01.jpg">
-                        <a>Shoes</a> (45)
+                        <img alt="photo of category" class="pic-of-category" src=".\pics\categories-grid\big_91a0aec1f7e49f08f81c7c25bcce9fd1_01.jpg">
+                        <span><a>Shoes</a> (45)</span>
                     </div>
                     <div class="categories-grid__category">
-                        <img alt="photo of category" src=".\pics\categories-grid\big_91a0aec1f7e49f08f81c7c25bcce9fd1_1.jpg">
-                        <a>Shoes</a> (45)
+                        <img alt="photo of category" class="pic-of-category" src=".\pics\categories-grid\big_91a0aec1f7e49f08f81c7c25bcce9fd1_1.jpg">
+                        <span><a>Shoes</a> (45)</span>
                     </div>
                     <div class="categories-grid__category">
-                        <img alt="photo of category" src=".\pics\categories-grid\big_91a0aec1f7e49f08f81c7c25bcce9fd1_12.jpg">
-                        <a>Shoes</a> (45)
+                        <img alt="photo of category" class="pic-of-category" src=".\pics\categories-grid\big_91a0aec1f7e49f08f81c7c25bcce9fd1_12.jpg">
+                        <span><a>Shoes</a> (45)</span>
                     </div>
                     <div class="categories-grid__category">
-                        <img alt="photo of category" src=".\pics\categories-grid\big_8018582e5b743eec172a260d99602c0f_0.jpg">
-                        <a>Shoes</a> (45)
+                        <img alt="photo of category" class="pic-of-category" src=".\pics\categories-grid\big_8018582e5b743eec172a260d99602c0f_0.jpg">
+                        <span><a>Shoes</a> (45)</span>
                     </div>
                     <div class="categories-grid__category">
-                        <img alt="photo of category" src=".\pics\categories-grid\big_d41d8cd98f00b204e9800998ecf8427e_0.jpg">
-                        <a>Shoes</a> (45)
+                        <img alt="photo of category" class="pic-of-category" src=".\pics\categories-grid\big_d41d8cd98f00b204e9800998ecf8427e_0.jpg">
+                        <span><a>Shoes</a> (45)</span>
                     </div>
                     <div class="categories-grid__category">
-                        <img alt="photo of category" src=".\pics\categories-grid\big_d41d8cd98f00b204e9800998ecf8427e_1.jpg">
-                        <a>Shoes</a> (45)
+                        <img alt="photo of category" class="pic-of-category" src=".\pics\categories-grid\big_d41d8cd98f00b204e9800998ecf8427e_1.jpg">
+                        <span><a>Shoes</a> (45)</span>
                     </div>
                 </div>
             </main>
