--- a/categories-grid.html
+++ b/categories-grid.html
@@ -14,7 +14,7 @@
                     <img alt="logo" class="logo__logo" src=".\pics\logo.png">
                 </div>
                 <div class='header-buttons'>
-                    <input class="header-elements__Element" type="search" name="search" placeholder="Search" pattern=".{1,}">
+                    <input class="header-elements__Search" type="search" name="search" placeholder="Search" pattern=".{1,}">
                     <button class="header-elements__Element" name="card">
                         <i class="fas fa-shopping-cart"></i>
                     </button>
