--- a/Cart.html
+++ b/Cart.html
@@ -2,30 +2,68 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title> item-card </title>
+        <title> Order form </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="./css/cart.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     </head>
     <body>
-        <div>
-            <header>
-                <img alt="logo">
-                <input type="search" name="search" placeholder="Search" pattern=".{1,}">
-                <button name="card"> </button>
-                <button name="profile"></button>
-            </header>
-            <main>
+        <header class="header">
+            <div class="logo">
+                <img alt="logo" class="logo__logo" src=".\pics\logo.png">
+            </div>
+            <div class='header-buttons'>
+                <input class="header-elements__Search" type="search" name="search" placeholder="Search" pattern=".{1,}">
+                <button class="header-elements__Element" name="card">
+                    <i class="fas fa-shopping-cart"></i>
+                </button>
+                <button class="header-elements__Element" name="profile">
+                    <i class="fas fa-user-circle"></i>
+                </button>
+            </div>
+        </header>
+        <div class="content">
+            <main class="main">
                 <div id="goodsInCart">
                     <div class="good">
-                        <img name="Photo-of-good-in-card">
+                        <img name="Photo-of-good-in-card" class="good__logo"src="./pics/cart/googlenexus6p-1024x768.jpg">
                         <span class="name-of-good">Nexus 7</span>
                         Quantity
-                        <input type="number">
-                        <span class="priceOfGood"></span>
-                        <a class="removeGoodInCard">Remove</a>
+                        <div>
+                            <input type="number" name="quantity" value="1">
+                        </div>
+                        <span class="priceOfGood">$777</span>
+                        <a class="good__LinkRemoveGoodInCard">Remove</a>
                     </div>
-                    <div id="totalCostUnderGoods">
-                        Total: <span id="totalCostInCartUnderGoods">$768</span>
-                        <button>Continue shopping</button>
-                        <button>Proceed to Checkout</button>
+                    <div class="good">
+                        <img name="Photo-of-good-in-card" class="good__logo"src="./pics/cart/googlenexus6p-1024x768.jpg">
+                        <span class="name-of-good">Nexus 7</span>
+                        Quantity
+                        <div>
+                            <input type="number" name="quantity" value="1">
+                        </div>
+                        <span class="priceOfGood">$777</span>
+                        <a class="good__LinkRemoveGoodInCard">Remove</a>
+                    </div>
+                    <div class="good">
+                        <img name="Photo-of-good-in-card" class="good__logo"src="./pics/cart/googlenexus6p-1024x768.jpg">
+                        <span class="name-of-good">Nexus 7</span>
+                        Quantity
+                        <div>
+                            <input type="number" name="quantity" value="1">
+                        </div>
+                        <span class="priceOfGood">$777</span>
+                        <a class="good__LinkRemoveGoodInCard">Remove</a>
+                    </div>
+                    <div class="good">
+                        <img name="Photo-of-good-in-card" class="good__logo"src="./pics/cart/googlenexus6p-1024x768.jpg">
+                        <span class="name-of-good">Nexus 7</span>
+                        Quantity
+                        <div>
+                            <input type="number" name="quantity" value="1">
+                        </div>
+                        <span class="priceOfGood">$777</span>
+                        <a class="good__LinkRemoveGoodInCard">Remove</a>
                     </div>
                 </div>
                 <div id="totalCostUnderGoods">
@@ -34,14 +72,13 @@
                     <button>Proceed to Checkout</button>
                 </div>
             </main>
-            <aside>
-                    Bsaket Summary
-                    (<span id="QuantityOfGoodsInTheCart">2 items</span>)
-                    <p class="totalCostInCartOfGoods">$768</p>
-                    <button>Proceed to CheckOut</button>
-                </aside>
-
-            <footer>©</footer>
+            <aside class="aside">
+                Bsaket Summary
+                (<span id="QuantityOfGoodsInTheCart">2 items</span>)
+                <p class="totalCostInCartOfGoods">$768</p>
+                <button>Proceed to CheckOut</button>
+            </aside>
         </div>
+        <footer class="footer">©</footer>
     </body>
 </html>
