nice cart, without scroll

--- a/Cart.html
+++ b/Cart.html
@@ -30,10 +30,12 @@
                         <span class="name-of-good">Nexus 7</span>
                         Quantity
                         <div>
-                            <input type="number" name="quantity" value="1">
+                            <input class="good__quantity" type="number" name="quantity" value="1">
                         </div>
-                        <span class="priceOfGood">$777</span>
-                        <a class="good__LinkRemoveGoodInCard">Remove</a>
+                        <div>
+                            <span class="priceOfGood">$777</span>
+                            <span><a class="good__LinkRemoveGoodInCard">Remove</a></span>
+                        </div>
                     </div>
                     <div class="good">
                         <img name="Photo-of-good-in-card" class="good__logo"src="./pics/cart/googlenexus6p-1024x768.jpg">
