--- a/item-card.html
+++ b/item-card.html
@@ -1,20 +1,29 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="css/globalStyle.css">
-        <title> item-card </title>
+        <title>cart </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="./css/cart.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     </head>
     <body>
-        <div>
-            <header>
-                <img alt="logo">
-                <input type="search" name="search" placeholder="Search" pattern=".{1,}">
-                <button name="card"> </button>
-                <button name="profile"></button>
-            </header>
-            <main>
-                <span>Electronics</span>|<span>Nexus 7</span>
+        <header class="header">
+            <div class="logo">
+                <img alt="logo" class="logo__logo" src=".\pics\logo.png">
+            </div>
+            <div class='header-buttons'>
+                <input class="header-elements__Search" type="search" name="search" placeholder="Search" pattern=".{1,}">
+                <button class="header-elements__Element" name="card">
+                    <i class="fas fa-shopping-cart"></i>
+                </button>
+                <button class="header-elements__Element" name="profile">
+                    <i class="fas fa-user-circle"></i>
+                </button>
+            </div>
+        </header>
+            <main class="main">
+                <p><span>Electronics</span>|<span>Nexus 7</span></p>
                 <div>
                     <img name="main-pic-of-good">
                     <div>
@@ -39,7 +48,7 @@
 
                 
             </main>
-            <footer>©</footer>
+            <footer class="footer">©</footer>
         </div>
     </body>
 </html>
