--- a/Items-grid.html
+++ b/Items-grid.html
@@ -2,31 +2,103 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title> item-card </title>
+        <title>items grid</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="./css/item-grid.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     </head>
     <body>
-        <div>
-            <header>
-                <img alt="logo">
-                <input type="search" name="search" placeholder="Search" pattern=".{1,}">
-                <button name="card"> </button>
-                <button name="profile"></button>
-            </header>
-            <nav>
-                <div class="CotegoryOfGoodsInGrid">
-                    <img alt="Electronics" class="PicOfCotegoryOfGoodsInGrid"><a class="NameOfCotegoryOfGoodsInGrid">Electronics</a>
+        <header class="header">
+            <div class="logo">
+                <img alt="logo" class="logo__logo" src=".\pics\logo.png">
+            </div>
+            <div class='header-buttons'>
+                <input class="header-elements__Search" type="search" name="search" placeholder="Search" pattern=".{1,}">
+                <button class="header-elements__Element" name="card">
+                    <i class="fas fa-shopping-cart"></i>
+                </button>
+                <button class="header-elements__Element" name="profile">
+                    <i class="fas fa-user-circle"></i>
+                </button>
+            </div>
+        </header>
+            <nav class="widget">
+                <h3 class="widget-title">Категории</h3>
+                <ul class="widget-list">
+                    <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
+                    <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
+                    <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
+                    <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
+                    <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
+                </ul>
                 </div>
             </nav>
-            <main>
-                <a>List View</a>
-                <div class="GoodInGrid">
-                   <img alt="photo of good">
-                   <a class="NameOfGood">Nexus 7</a>
-                   <p class="priceOfGood">$555</p>
+            <div class="live-veiw"><a>List View</a></div>
+            <main class="main">
+                
+                <div class="good-in-grid">
+                   <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="good-in-grid__pic-of-good-in-grid">
+                   <h3><a class="NameOfGood">Nexus 7</a></h3>
+                   <b class="priceOfGood">$555</b>
                 </div>
+                <div class="good-in-grid">
+                    <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="good-in-grid__pic-of-good-in-grid">
+                    <h3><a class="NameOfGood">Nexus 7</a></h3>
+                    <b class="priceOfGood">$555</b>
+                </div>
+                <div class="good-in-grid">
+                   <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="good-in-grid__pic-of-good-in-grid">
+                   <h3><a class="NameOfGood">Nexus 7</a></h3>
+                   <b class="priceOfGood">$555</b>
+                </div>
+                <div class="good-in-grid">
+                    <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="good-in-grid__pic-of-good-in-grid">
+                    <h3><a class="NameOfGood">Nexus 7</a></h3>
+                    <b class="priceOfGood">$555</b>
+                </div>
+                <div class="good-in-grid">
+                   <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="good-in-grid__pic-of-good-in-grid">
+                   <h3><a class="NameOfGood">Nexus 7</a></h3>
+                   <b class="priceOfGood">$555</b>
+                </div>
+                <div class="good-in-grid">
+                    <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="good-in-grid__pic-of-good-in-grid">
+                    <h3><a class="NameOfGood">Nexus 7</a></h3>
+                    <b class="priceOfGood">$555</b>
+                </div>
+                <div class="good-in-grid">
+                   <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="good-in-grid__pic-of-good-in-grid">
+                   <h3><a class="NameOfGood">Nexus 7</a></h3>
+                   <b class="priceOfGood">$555</b>
+                </div>
+                <div class="good-in-grid">
+                    <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="good-in-grid__pic-of-good-in-grid">
+                    <h3><a class="NameOfGood">Nexus 7</a></h3>
+                    <b class="priceOfGood">$555</b>
+                </div>
+                <div class="good-in-grid">
+                   <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="good-in-grid__pic-of-good-in-grid">
+                   <h3><a class="NameOfGood">Nexus 7</a></h3>
+                   <b class="priceOfGood">$555</b>
+                </div>
+                <div class="good-in-grid">
+                    <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="good-in-grid__pic-of-good-in-grid">
+                    <h3><a class="NameOfGood">Nexus 7</a></h3>
+                    <b class="priceOfGood">$555</b>
+                </div>
+                <div class="good-in-grid">
+                   <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="good-in-grid__pic-of-good-in-grid">
+                   <h3><a class="NameOfGood">Nexus 7</a></h3>
+                   <b class="priceOfGood">$555</b>
+                </div>
+                <div class="good-in-grid">
+                    <img alt="photo of good" src="./pics/cart/googlenexus6p-1024x768.jpg"class="good-in-grid__pic-of-good-in-grid">
+                    <h3><a class="NameOfGood">Nexus 7</a></h3>
+                    <b class="priceOfGood">$555</b>
+                </div>
+                
             </main>
-
-            <footer>©</footer>
+            <footer class="footer">©</footer>
         </div>
     </body>
 </html>
