--- a/Items-list.html
+++ b/Items-list.html
@@ -2,33 +2,118 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title> item-list </title>
+        <title>items list</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="./css/items-list.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     </head>
     <body>
-        <div>
-            <header>
-                <img alt="logo">
-                <input type="search" name="search" placeholder="Search" pattern=".{1,}">
-                <button name="card"> </button>
-                <button name="profile"></button>
-            </header>
-            <nav>
-                <div class="CotegoryOfGoodsInGrid">
-                    <img alt="Electronics" class="PicOfCotegoryOfGoodsInGrid"><a class="NameOfCotegoryOfGoodsInGrid">Electronics</a>
+        <header class="header">
+            <div class="logo">
+                <img alt="logo" class="logo__logo" src=".\pics\logo.png">
+            </div>
+            <div class='header-buttons'>
+                <input class="header-elements__Search" type="search" name="search" placeholder="Search" pattern=".{1,}">
+                <a href="#login"><button class="header-elements__Element" name="card">
+                    <i class="fas fa-shopping-cart"></i>
+                </button></a>
+                <a href="#register"><button class="header-elements__Element" name="profile">
+                    <i class="fas fa-user-circle"></i>
+                </button></a>
+            </div>
+            <div id="login">
+                <button class="x">x</button>
+                Please Sign In
+                <form>
+                    <input type="email" name="email" placeholder="email" autofocus required pattern=".{3,}"> <br>
+                    <input type="password" name="password" placeholder="password" required pattern=".{1,}"> <br>
+                    <input type="checkbox" name="Remember me">
+                    Remember me
+                    <button>Sign In</button>
+                </form>
+                <a href="#register">Register</a>
+            </div>
+            <div id="register">
+                <button class="x">x</button>
+                <form>
+                    <input type="email" name="email" placeholder="email" autofocus required pattern=".{3,}"> <br>
+                    <input type="password" name="password" placeholder="password" required pattern=".{1,}"> <br>
+                    <button>Registration</button>
+                </form>
+                <a href="#login">Sign In</a>
+            </div>
+        </header>
+            <nav class="widget">
+                <h3 class="widget-title">Категории</h3>
+                <ul class="widget-list">
+                    <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
+                    <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
+                    <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
+                    <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
+                    <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
+                </ul>
                 </div>
             </nav>
-            <main>
-                <a>List View</a>
-                <div class="GoodInlist">
-                   <img alt="photo of good in list">
-                   <a class="NameOfGood">Nexus 7</a>
-                   <span class="priceOfGood">$555</span>
-                   <p class="ShortDescriptionOfGoodInList">Short ShortDescriptionOfGoodInList</p>
-                   <button>Add to card</button>
+            <div class="live-veiw"><a>Grid View</a></div>
+            <main class="main">
+                <div class="good-in-list">
+                   <img alt="photo of good in list" class="good-in-list__pic-of-good-in-list"src="./pics/cart/googlenexus6p-1024x768.jpg">
+                   <div class="good-name-and-cost">
+                        <h1 class="NameOfGood">Nexus 7</h1>
+                        <b class="priceOfGood">$555</b>
+                        <p class="ShortDescriptionOfGoodInList">Short ShortDescriptionOfGoodInList</p>
+                        <button>Add to card</button>
+                    </div>
+                </div>
+                <div class="good-in-list">
+                   <img alt="photo of good in list" class="good-in-list__pic-of-good-in-list"src="./pics/cart/googlenexus6p-1024x768.jpg">
+                   <div class="good-name-and-cost">
+                        <h1 class="NameOfGood">Nexus 7</h1>
+                        <b class="priceOfGood">$555</b>
+                        <p class="ShortDescriptionOfGoodInList">Short ShortDescriptionOfGoodInList</p>
+                        <button>Add to card</button>
+                    </div>
+                </div>
+                <div class="good-in-list">
+                   <img alt="photo of good in list" class="good-in-list__pic-of-good-in-list"src="./pics/cart/googlenexus6p-1024x768.jpg">
+                   <div class="good-name-and-cost">
+                        <h1 class="NameOfGood">Nexus 7</h1>
+                        <b class="priceOfGood">$555</b>
+                        <p class="ShortDescriptionOfGoodInList">Short ShortDescriptionOfGoodInList</p>
+                        <button>Add to card</button>
+                    </div>
+                </div>
+                <div class="good-in-list">
+                   <img alt="photo of good in list" class="good-in-list__pic-of-good-in-list"src="./pics/cart/googlenexus6p-1024x768.jpg">
+                   <div class="good-name-and-cost">
+                        <h1 class="NameOfGood">Nexus 7</h1>
+                        <b class="priceOfGood">$555</b>
+                        <p class="ShortDescriptionOfGoodInList">Short ShortDescriptionOfGoodInList</p>
+                        <button>Add to card</button>
+                    </div>
+                </div>
+                <div class="good-in-list">
+                   <img alt="photo of good in list" class="good-in-list__pic-of-good-in-list"src="./pics/cart/googlenexus6p-1024x768.jpg">
+                   <div class="good-name-and-cost">
+                        <h1 class="NameOfGood">Nexus 7</h1>
+                        <b class="priceOfGood">$555</b>
+                        <p class="ShortDescriptionOfGoodInList">Short ShortDescriptionOfGoodInList</p>
+                        <button>Add to card</button>
+                    </div>
+                </div>
+                <div class="good-in-list">
+                   <img alt="photo of good in list" class="good-in-list__pic-of-good-in-list"src="./pics/cart/googlenexus6p-1024x768.jpg">
+                   <div class="good-name-and-cost">
+                        <h1 class="NameOfGood">Nexus 7</h1>
+                        <b class="priceOfGood">$555</b>
+                        <p class="ShortDescriptionOfGoodInList">Short ShortDescriptionOfGoodInList</p>
+                        <button>Add to card</button>
+                    </div>
                 </div>
             </main>
 
-            <footer>©</footer>
+            <footer class="footer">©</footer>
+            
         </div>
     </body>
 </html>
