--- a/Order-form.html
+++ b/Order-form.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title> Order form </title>
+        <title>Order form</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./css/order-form.css">
+        <link rel="stylesheet" href="./css/items-list.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     </head>
     <body>
@@ -14,12 +14,33 @@
             </div>
             <div class='header-buttons'>
                 <input class="header-elements__Search" type="search" name="search" placeholder="Search" pattern=".{1,}">
-                <button class="header-elements__Element" name="card">
+                <a href="#login"><button class="header-elements__Element" name="card">
                     <i class="fas fa-shopping-cart"></i>
-                </button>
-                <button class="header-elements__Element" name="profile">
+                </button></a>
+                <a href="#register"><button class="header-elements__Element" name="profile">
                     <i class="fas fa-user-circle"></i>
-                </button>
+                </button></a>
+            </div>
+            <div id="login">
+                <button class="x">x</button>
+                Please Sign In
+                <form>
+                    <input type="email" name="email" placeholder="email" autofocus required pattern=".{3,}"> <br>
+                    <input type="password" name="password" placeholder="password" required pattern=".{1,}"> <br>
+                    <input type="checkbox" name="Remember me">
+                    Remember me
+                    <button>Sign In</button>
+                </form>
+                <a href="#register">Register</a>
+            </div>
+            <div id="register">
+                <button class="x">x</button>
+                <form>
+                    <input type="email" name="email" placeholder="email" autofocus required pattern=".{3,}"> <br>
+                    <input type="password" name="password" placeholder="password" required pattern=".{1,}"> <br>
+                    <button>Registration</button>
+                </form>
+                <a href="#login">Sign In</a>
             </div>
         </header>
         <main class="main">
