--- a/shipping-Address.html
+++ b/shipping-Address.html
@@ -2,35 +2,76 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title> shipping address </title>
+        <title>shipping address</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="./css/shiping-address.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     </head>
     <body>
-        <div>
-            <header>
-                <img alt="logo">
-                <input type="search" name="search" placeholder="Search" pattern=".{1,}">
-                <button name="card"> </button>
-                <button name="profile"></button>
-            </header>
-            <main>
+        <header class="header">
+            <div class="logo">
+                <img alt="logo" class="logo__logo" src=".\pics\logo.png">
+            </div>
+            <div class='header-buttons'>
+                <input class="header-elements__Search" type="search" name="search" placeholder="Search" pattern=".{1,}">
+                <a href="#login"><button class="header-elements__Element" name="card">
+                    <i class="fas fa-shopping-cart"></i>
+                </button></a>
+                <a href="#register"><button class="header-elements__Element" name="profile">
+                    <i class="fas fa-user-circle"></i>
+                </button></a>
+            </div>
+            <div id="login">
+                <button class="x">x</button>
+                Please Sign In
                 <form>
-                    <div id="shippingAddress">
-                        Country <input type="text" name="country" pattern=".{1,}">
-                        City <input type="text" name="city" pattern=".{1,}">
-                        Address <input type="text" name="adress" pattern=".{1,}">
-                        ZIP <input type="text" name="zip" pattern=".{1,}">
+                    <input type="email" name="email" placeholder="email" autofocus required pattern=".{3,}"> <br>
+                    <input type="password" name="password" placeholder="password" required pattern=".{1,}"> <br>
+                    <input type="checkbox" name="Remember me">
+                    Remember me
+                    <button>Sign In</button>
+                </form>
+                <a href="#register">Register</a>
+            </div>
+            <div id="register">
+                <button class="x">x</button>
+                <form>
+                    <input type="email" name="email" placeholder="email" autofocus required pattern=".{3,}"> <br>
+                    <input type="password" name="password" placeholder="password" required pattern=".{1,}"> <br>
+                    <button>Registration</button>
+                </form>
+                <a href="#login">Sign In</a>
+            </div>
+        </header>
+        <main class="main">
+                <form id="form">
+                    <div class="addresses">
+                        <div id="shipping-address">
+
+                                <h1>Shipping Address </h1>
+
+                            <div class="shipping-address__names">
+                                <div>Country<input type="text" name="country" pattern=".{1,}"></div>
+                                <div>City<input type="text" name="city" pattern=".{1,}"></div>
+                                <div>Address<input type="text" name="adress" pattern=".{1,}"> </div>
+                                <div>ZIP<input type="text" name="zip" pattern=".{1,}"></div>
+                            </div>
+                        </div>
+                        <div id="billing-address">
+                                <h1>Billing Address </h1><br>
+                            <div class="shipping-address__names">
+                                <div>Country<input type="text" name="country" pattern=".{1,}"></div>
+                                <div>City<input type="text" name="city" pattern=".{1,}"></div>
+                                <div>Address<input type="text" name="adress" pattern=".{1,}"> </div>
+                                <div>ZIP<input type="text" name="zip" pattern=".{1,}"></div>
+                            </div>
+                        </div>
                     </div>
-                    <div id="billingAddress">
-                        Country <input type="text" name="country" pattern=".{1,}">
-                        City <input type="text" name="city" pattern=".{1,}">
-                        Address <input type="text" name="adress" pattern=".{1,}">
-                        ZIP <input type="text" name="zip" pattern=".{1,}">
-                    </div>
-                    <button type="submit">Continue</button>
+                    <button class="submit-button"type="submit">Continue</button>
                 </form>
             </main>
 
-            <footer>©</footer>
+            <footer class="footer">©</footer>
         </div>
     </body>
 </html>
