--- a/Cart.html
+++ b/Cart.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html> <!-- привет, нужно сделать футтер с отступом сверху, убрать все наложения друг на друга до 320 пикс и сделать красиво   -->
     <head>
         <meta charset="utf-8">
         <title>cart </title>
@@ -42,30 +42,72 @@
                         <span class="name-of-good">Nexus 7</span>
                         Quantity
                         <div>
-                            <input type="number" name="quantity" value="1">
+                            <input class="good__quantity" type="number" name="quantity" value="1">
                         </div>
-                        <span class="priceOfGood">$777</span>
-                        <a class="good__LinkRemoveGoodInCard">Remove</a>
+                        <div>
+                            <span class="priceOfGood">$777</span>
+                            <span><a class="good__LinkRemoveGoodInCard">Remove</a></span>
+                        </div>
                     </div>
                     <div class="good">
                         <img name="Photo-of-good-in-card" class="good__logo"src="./pics/cart/googlenexus6p-1024x768.jpg">
                         <span class="name-of-good">Nexus 7</span>
                         Quantity
                         <div>
-                            <input type="number" name="quantity" value="1">
+                            <input class="good__quantity" type="number" name="quantity" value="1">
                         </div>
-                        <span class="priceOfGood">$777</span>
-                        <a class="good__LinkRemoveGoodInCard">Remove</a>
+                        <div>
+                            <span class="priceOfGood">$777</span>
+                            <span><a class="good__LinkRemoveGoodInCard">Remove</a></span>
+                        </div>
                     </div>
                     <div class="good">
                         <img name="Photo-of-good-in-card" class="good__logo"src="./pics/cart/googlenexus6p-1024x768.jpg">
                         <span class="name-of-good">Nexus 7</span>
                         Quantity
                         <div>
-                            <input type="number" name="quantity" value="1">
+                            <input class="good__quantity" type="number" name="quantity" value="1">
                         </div>
-                        <span class="priceOfGood">$777</span>
-                        <a class="good__LinkRemoveGoodInCard">Remove</a>
+                        <div>
+                            <span class="priceOfGood">$777</span>
+                            <span><a class="good__LinkRemoveGoodInCard">Remove</a></span>
+                        </div>
+                    </div>
+                    <div class="good">
+                        <img name="Photo-of-good-in-card" class="good__logo"src="./pics/cart/googlenexus6p-1024x768.jpg">
+                        <span class="name-of-good">Nexus 7</span>
+                        Quantity
+                        <div>
+                            <input class="good__quantity" type="number" name="quantity" value="1">
+                        </div>
+                        <div>
+                            <span class="priceOfGood">$777</span>
+                            <span><a class="good__LinkRemoveGoodInCard">Remove</a></span>
+                        </div>
+                    </div>
+                    <div class="good">
+                        <img name="Photo-of-good-in-card" class="good__logo"src="./pics/cart/googlenexus6p-1024x768.jpg">
+                        <span class="name-of-good">Nexus 7</span>
+                        Quantity
+                        <div>
+                            <input class="good__quantity" type="number" name="quantity" value="1">
+                        </div>
+                        <div>
+                            <span class="priceOfGood">$777</span>
+                            <span><a class="good__LinkRemoveGoodInCard">Remove</a></span>
+                        </div>
+                    </div>
+                    <div class="good">
+                        <img name="Photo-of-good-in-card" class="good__logo"src="./pics/cart/googlenexus6p-1024x768.jpg">
+                        <span class="name-of-good">Nexus 7</span>
+                        Quantity
+                        <div>
+                            <input class="good__quantity" type="number" name="quantity" value="1">
+                        </div>
+                        <div>
+                            <span class="priceOfGood">$777</span>
+                            <span><a class="good__LinkRemoveGoodInCard">Remove</a></span>
+                        </div>
                     </div>
                 </div>
                 <div id="totalCostUnderGoods">
@@ -77,7 +119,7 @@
             <aside class="aside">
                 Bsaket Summary
                 (<span id="QuantityOfGoodsInTheCart">2 items</span>)
-                <p class="totalCostInCartOfGoods">$768</p>
+                <p class="totalCostInCartOfGoods"><b>$768</b></p>
                 <button>Proceed to CheckOut</button>
             </aside>
         </div>
