--- a/shipping-Address.html
+++ b/shipping-Address.html
@@ -47,23 +47,21 @@
                 <form id="form">
                     <div class="addresses">
                         <div id="shipping-address">
-
-                                <h1>Shipping Address </h1>
-
+                            <h1>Shipping Address </h1>
                             <div class="shipping-address__names">
-                                <div>Country<input type="text" name="country" pattern=".{1,}"></div>
-                                <div>City<input type="text" name="city" pattern=".{1,}"></div>
-                                <div>Address<input type="text" name="adress" pattern=".{1,}"> </div>
-                                <div>ZIP<input type="text" name="zip" pattern=".{1,}"></div>
+                                <div>Country <input type="text" name="country" pattern=".{1,}"></div>
+                                <div>City <input type="text" name="city" pattern=".{1,}"></div>
+                                <div>Address <input type="text" name="adress" pattern=".{1,}"> </div>
+                                <div>ZIP <input type="text" name="zip" pattern=".{1,}"></div>
                             </div>
                         </div>
                         <div id="billing-address">
-                                <h1>Billing Address </h1><br>
+                                <h1>Billing Address </h1>
                             <div class="shipping-address__names">
-                                <div>Country<input type="text" name="country" pattern=".{1,}"></div>
-                                <div>City<input type="text" name="city" pattern=".{1,}"></div>
-                                <div>Address<input type="text" name="adress" pattern=".{1,}"> </div>
-                                <div>ZIP<input type="text" name="zip" pattern=".{1,}"></div>
+                                <div>Country <input type="text" name="country" pattern=".{1,}"></div>
+                                <div>City <input type="text" name="city" pattern=".{1,}"></div>
+                                <div>Address <input type="text" name="adress" pattern=".{1,}"> </div>
+                                <div>ZIP <input type="text" name="zip" pattern=".{1,}"></div>
                             </div>
                         </div>
                     </div>
