--- a/Order-form.html
+++ b/Order-form.html
@@ -4,23 +4,11 @@
         <meta charset="utf-8">
         <title>Order form</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./css/items-list.css">
+        <link rel="stylesheet" href="./css/order-form.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     </head>
     <body>
-        <header class="header">
-            <div class="logo">
-                <img alt="logo" class="logo__logo" src=".\pics\logo.png">
-            </div>
-            <div class='header-buttons'>
-                <input class="header-elements__Search" type="search" name="search" placeholder="Search" pattern=".{1,}">
-                <a href="#login"><button class="header-elements__Element" name="card">
-                    <i class="fas fa-shopping-cart"></i>
-                </button></a>
-                <a href="#register"><button class="header-elements__Element" name="profile">
-                    <i class="fas fa-user-circle"></i>
-                </button></a>
-            </div>
+        <div id="popup-container">
             <div id="login">
                 <button class="x">x</button>
                 Please Sign In
@@ -42,15 +30,35 @@
                 </form>
                 <a href="#login">Sign In</a>
             </div>
+        </div>
+        <header class="header">
+            <div class="logo">
+                <img alt="logo" class="logo__logo" src=".\pics\logo.png">
+            </div>
+            <div class='header-buttons'>
+                <input class="header-elements__Search" type="search" name="search" placeholder="Search" pattern=".{1,}">
+                <a href="#login"><button class="header-elements__Element" name="card">
+                    <i class="fas fa-shopping-cart"></i>
+                </button></a>
+                <a href="#register"><button class="header-elements__Element" name="profile">
+                    <i class="fas fa-user-circle"></i>
+                </button></a>
+            </div>
         </header>
         <main class="main">
             <div class="order-form">
                 <form>
-                    <input class="order-form__form" type="number"name="" placeholder="123" pattern=".{3,}" >
-                    <input class="order-form__form" type="number"name="numberOfCard" placeholder="0000000000000000" pattern=".{16,}" >
-                    <input class="order-form__form" type="month"name="monthAndYearOfCard" placeholder="mm" pattern=".{2,}" >
-                    <input class="order-form__form" type="text" name="NameOfHolder" placeholder="Name Surname" pattern=".{1,}" >
-                    <button class="order-form__form" type="submit">Finish</button>
+                    <div>                    
+                        <div class="order-creditcard__back-side">
+                            <input class="order-form__form" type="number"name="" placeholder="CCV" pattern=".{3,}" >
+                        </div>
+                        <div class="order-creditcard__front-side">
+                            <input class="order-form__form" type="number"name="numberOfCard" placeholder="0000000000000000" pattern=".{16,}" >
+                            <input class="order-form__form" type="month"name="monthAndYearOfCard" placeholder="mm" pattern=".{2,}" >
+                            <input class="order-form__form" type="text" name="NameOfHolder" placeholder="Name Surname" pattern=".{1,}" >
+                        </div>
+                        <button class="order-form__form order-form__button" type="submit">Finish</button>
+                    </div>  
                 </form>
             </div>
         </main>
