--- a/item-card.html
+++ b/item-card.html
@@ -47,7 +47,7 @@
                         Quantity
                         <input class="quantity"type="number" pattern=".{0,}">
                         <button>Add to cart</button>
-                        <i class="fab fa-twitter"></i> <i class="fab fa-facebook-square"></i> <i class="far fa-envelope"></i>
+                        <br><i class="fab fa-twitter"></i> <i class="fab fa-facebook-square"></i> <i class="far fa-envelope"></i>
                     </form>
                 </div>
 
