animation started in items-list.css / responsive fixed on same pages

--- a/Items-list.html
+++ b/Items-list.html
@@ -8,19 +8,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     </head>
     <body>
-        <header class="header">
-            <div class="logo">
-                <img alt="logo" class="logo__logo" src=".\pics\logo.png">
-            </div>
-            <div class='header-buttons'>
-                <input class="header-elements__Search" type="search" name="search" placeholder="Search" pattern=".{1,}">
-                <a href="#login"><button class="header-elements__Element" name="card">
-                    <i class="fas fa-shopping-cart"></i>
-                </button></a>
-                <a href="#register"><button class="header-elements__Element" name="profile">
-                    <i class="fas fa-user-circle"></i>
-                </button></a>
-            </div>
+        <div id="popup-container">
             <div id="login">
                 <button class="x">x</button>
                 Please Sign In
@@ -42,7 +30,23 @@
                 </form>
                 <a href="#login">Sign In</a>
             </div>
+        </div>  
+        <header class="header">
+            <div class="logo">
+                <img alt="logo" class="logo__logo" src=".\pics\logo.png">
+            </div>
+            <div class='header-buttons'>
+                <input class="header-elements__Search" type="search" name="search" placeholder="Search" pattern=".{1,}">
+                <a href="#login"><button class="header-elements__Element" name="card">
+                    <i class="fas fa-shopping-cart"></i>
+                </button></a>
+                <a href="#register"><button class="header-elements__Element" name="profile">
+                    <i class="fas fa-user-circle"></i>
+                </button></a>
+            </div>
         </header>
+        <div class="live-veiw"><a>Grid View</a></div>
+        <div id="content">
             <nav class="widget">
                 <h3 class="widget-title">Категории</h3>
                 <ul class="widget-list">
@@ -52,13 +56,11 @@
                     <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
                     <li><a class="NameOfCotegoryOfGoodsInGrid"><i class="fas fa-mobile-alt"></i> Electronics</a></li>
                 </ul>
-                </div>
             </nav>
-            <div class="live-veiw"><a>Grid View</a></div>
             <main class="main">
                 <div class="good-in-list">
-                   <img alt="photo of good in list" class="good-in-list__pic-of-good-in-list"src="./pics/cart/googlenexus6p-1024x768.jpg">
-                   <div class="good-name-and-cost">
+                    <img alt="photo of good in list" class="good-in-list__pic-of-good-in-list"src="./pics/cart/googlenexus6p-1024x768.jpg">
+                    <div class="good-name-and-cost">
                         <h1 class="NameOfGood">Nexus 7</h1>
                         <b class="priceOfGood">$555</b>
                         <p class="ShortDescriptionOfGoodInList">Short ShortDescriptionOfGoodInList</p>
@@ -66,8 +68,8 @@
                     </div>
                 </div>
                 <div class="good-in-list">
-                   <img alt="photo of good in list" class="good-in-list__pic-of-good-in-list"src="./pics/cart/googlenexus6p-1024x768.jpg">
-                   <div class="good-name-and-cost">
+                    <img alt="photo of good in list" class="good-in-list__pic-of-good-in-list"src="./pics/cart/googlenexus6p-1024x768.jpg">
+                    <div class="good-name-and-cost">
                         <h1 class="NameOfGood">Nexus 7</h1>
                         <b class="priceOfGood">$555</b>
                         <p class="ShortDescriptionOfGoodInList">Short ShortDescriptionOfGoodInList</p>
@@ -75,8 +77,8 @@
                     </div>
                 </div>
                 <div class="good-in-list">
-                   <img alt="photo of good in list" class="good-in-list__pic-of-good-in-list"src="./pics/cart/googlenexus6p-1024x768.jpg">
-                   <div class="good-name-and-cost">
+                    <img alt="photo of good in list" class="good-in-list__pic-of-good-in-list"src="./pics/cart/googlenexus6p-1024x768.jpg">
+                    <div class="good-name-and-cost">
                         <h1 class="NameOfGood">Nexus 7</h1>
                         <b class="priceOfGood">$555</b>
                         <p class="ShortDescriptionOfGoodInList">Short ShortDescriptionOfGoodInList</p>
@@ -84,8 +86,8 @@
                     </div>
                 </div>
                 <div class="good-in-list">
-                   <img alt="photo of good in list" class="good-in-list__pic-of-good-in-list"src="./pics/cart/googlenexus6p-1024x768.jpg">
-                   <div class="good-name-and-cost">
+                    <img alt="photo of good in list" class="good-in-list__pic-of-good-in-list"src="./pics/cart/googlenexus6p-1024x768.jpg">
+                    <div class="good-name-and-cost">
                         <h1 class="NameOfGood">Nexus 7</h1>
                         <b class="priceOfGood">$555</b>
                         <p class="ShortDescriptionOfGoodInList">Short ShortDescriptionOfGoodInList</p>
@@ -93,8 +95,8 @@
                     </div>
                 </div>
                 <div class="good-in-list">
-                   <img alt="photo of good in list" class="good-in-list__pic-of-good-in-list"src="./pics/cart/googlenexus6p-1024x768.jpg">
-                   <div class="good-name-and-cost">
+                    <img alt="photo of good in list" class="good-in-list__pic-of-good-in-list"src="./pics/cart/googlenexus6p-1024x768.jpg">
+                    <div class="good-name-and-cost">
                         <h1 class="NameOfGood">Nexus 7</h1>
                         <b class="priceOfGood">$555</b>
                         <p class="ShortDescriptionOfGoodInList">Short ShortDescriptionOfGoodInList</p>
@@ -102,8 +104,8 @@
                     </div>
                 </div>
                 <div class="good-in-list">
-                   <img alt="photo of good in list" class="good-in-list__pic-of-good-in-list"src="./pics/cart/googlenexus6p-1024x768.jpg">
-                   <div class="good-name-and-cost">
+                    <img alt="photo of good in list" class="good-in-list__pic-of-good-in-list"src="./pics/cart/googlenexus6p-1024x768.jpg">
+                    <div class="good-name-and-cost">
                         <h1 class="NameOfGood">Nexus 7</h1>
                         <b class="priceOfGood">$555</b>
                         <p class="ShortDescriptionOfGoodInList">Short ShortDescriptionOfGoodInList</p>
@@ -111,9 +113,7 @@
                     </div>
                 </div>
             </main>
-
-            <footer class="footer">©</footer>
-            
         </div>
+        <footer class="footer">©</footer>
     </body>
 </html>
