--- a/Cart.html
+++ b/Cart.html
@@ -1,30 +1,53 @@
 <!DOCTYPE html>
-<html> <!-- привет, нужно сделать футтер с отступом сверху, убрать все наложения друг на друга до 320 пикс и сделать красиво   -->
+<html>
     <head>
         <meta charset="utf-8">
-        <title>cart </title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./css/cart.css">
+        <title> cart </title>
+        <link rel="stylesheet" href="./artifacts/main.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
-    <body>
-        <header class="header">
-            <div class="logo">
-                <img alt="logo" class="logo__logo" src=".\pics\logo.png">
+    <body class="body">
+        <div class="popup popup--zoom-popup">
+            <div id="login" class="login-form popup__login-form popup__login-form--show-popup">
+                <a class="popup__x popup__x--responsive-element" href="">x</a>
+                Please Sign In
+                <form>
+                    <input type="email" class="popup__form-element popup__form-element--responsive-element" name="email" placeholder="email" autofocus required pattern=".{3,}"> <br>
+                    <input type="password" class="popup__form-element popup__form-element--responsive-element" name="password" placeholder="password" required pattern=".{1,}"> <br>
+                    <input type="checkbox" class="popup__form-element popup__form-element--responsive-element" name="Remember me">
+                    Remember me
+                    <button type="submit" class="popup__form-element popup__form-element--responsive-element">Sign In</button>
+                </form>
+                <a href="#register" class="popup__link--responsive-element">Register</a>
             </div>
-            <div class='header-buttons'>
-                <input class="header-elements__Search" type="search" name="search" placeholder="Search" pattern=".{1,}">
-                <button class="header-elements__Element" name="card">
+            <div id="register" class="registration-form popup__registration-form popup__registration-form--show-popup">
+                <a class="popup__x popup__x--responsive-element" href="">x</a>
+                <form>
+                    <input type="email" class="popup__form-element popup__form-element--responsive-element" name="email" placeholder="email" autofocus required pattern=".{3,}"> <br>
+                    <input type="password" class="popup__form-element popup__form-element--responsive-element" name="password" placeholder="password" required pattern=".{1,}"> <br>
+                    <button type="submit" class="popup__form-element popup__form-element--responsive-element">Registration</button>
+                </form>
+                <a href="#login" class="popup__link--responsive-element">Sign In</a>
+            </div>
+        </div>  
+        <header class="header body__header">
+            <a href="categories-grid.html">
+                <div class="header__logo logo"> </div>
+            </a>
+            <div class="header__header-elements">
+                <input class="header__search search header__search--responsive-element" type="search" name="search" placeholder="Search" pattern=".{1,}">
+                <a class="header__icons icons" name="card">
                     <i class="fas fa-shopping-cart"></i>
-                </button>
-                <button class="header-elements__Element" name="profile">
+                </a>
+                <a class="header__icons icons header__icons--responsive-element" name="profile" href="#login">
                     <i class="fas fa-user-circle"></i>
-                </button>
+                </a>
             </div>
         </header>
         <div class="content">
-            <main class="main">
-                <div id="goodsInCart">
+            <main class="main content__main">
+                <div class="content__goods-in-cart goods-in-cart">
                     <div class="good">
                         <img name="Photo-of-good-in-card" class="good__logo"src="./pics/cart/googlenexus6p-1024x768.jpg">
                         <span class="name-of-good">Nexus 7</span>
